[ResourceList] Fix header alignment (#7965)
Fixes https://github.com/Shopify/polaris/issues/7959

--- a/polaris-react/src/components/BulkActions/BulkActions.scss
+++ b/polaris-react/src/components/BulkActions/BulkActions.scss
@@ -110,11 +110,6 @@ $bulk-actions-button-stacking-order: (
   }
 }
 
-.CheckableContainer {
-  flex: 1 1 0;
-  margin-left: calc(-1 * (var(--p-space-05) + var(--p-space-1)));
-}
-
 .disabled {
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   @include base-button-disabled;
