--- a/polaris-react/src/components/CheckableButton/CheckableButton.scss
+++ b/polaris-react/src/components/CheckableButton/CheckableButton.scss
@@ -1,10 +1,6 @@
 @import '../../styles/common';
 @import '../ResourceList/variables';
 
-$button-vertical-padding: calc(
-  (36px - var(--p-font-line-height-2) - var(--p-space-05)) / 2
-);
-
 .CheckableButton {
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   @include recolor-icon(var(--p-icon-on-interactive));
@@ -21,8 +17,6 @@ $button-vertical-padding: calc(
   min-height: 36px;
   min-width: 36px;
   margin: 0;
-  padding: $button-vertical-padding var(--p-space-1) $button-vertical-padding
-    var(--p-space-4);
   cursor: pointer;
   user-select: none;
   text-decoration: none;
@@ -47,10 +41,6 @@ $button-vertical-padding: calc(
   height: var(--p-choice-size);
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   width: var(--p-choice-size);
-  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-  margin-left: calc(
-    -1 * var(--p-space-2) - var(--p-control-border-width) - var(--p-border-width-1)
-  );
 }
 
 .Label {
